z-index issue fixed and pre-compiled the resulting css for use on server

--- a/css/style.less
+++ b/css/style.less
@@ -142,7 +142,6 @@ footer {
   float: right;
   left: 920px;
   position: fixed;
-  z-index: 1;
   .border-radius(0 0 5px 0);
   .box-sizing(border-box);
 
